--- a/game-of-life/src/App.css
+++ b/game-of-life/src/App.css
@@ -1,3 +1,10 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  border: 1px solid beige;
+}
+
 .App {
   text-align: center;
 }
@@ -19,13 +26,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
 }
 
-.App-link {
-  color: #61dafb;
+h1 {
+  font-family: 'Metal Mania', cursive;
+  font-size: 9rem;
+  text-shadow: 2px 2px lawngreen;
+  color: black;
 }
 
 @keyframes App-logo-spin {
