Basic header and basic footer

--- a/game-of-life/src/App.css
+++ b/game-of-life/src/App.css
@@ -7,6 +7,7 @@
 
 .App {
   text-align: center;
+  background-color: #282c34;
 }
 
 .App-logo {
@@ -21,7 +22,6 @@
 }
 
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -34,6 +34,17 @@ h1 {
   font-size: 9rem;
   text-shadow: 2px 2px lawngreen;
   color: black;
+  display: flex;
+}
+
+h1 img {
+  width: 20%;
+}
+
+footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 @keyframes App-logo-spin {
