--- a/game-of-life/src/App.css
+++ b/game-of-life/src/App.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  border: 1px solid beige;
+  border: 0;
 }
 
 .App {
@@ -39,6 +39,18 @@ h1 {
 
 h1 img {
   width: 20%;
+}
+
+.grid {
+  display: flex;
+  justify-content: center;
+  margin-top: -25%;
+}
+
+.grid-cells {
+  width: 20px;
+  height: 20px;
+  border: 1px solid black;
 }
 
 footer {
