--- a/game-of-life/src/App.css
+++ b/game-of-life/src/App.css
@@ -46,6 +46,18 @@ h1 img {
   width: 20%;
 }
 
+h2 {
+  font-family: 'Metal Mania', cursive;
+  font-size: 12rem;
+  text-shadow: 2px 2px lawngreen;
+}
+
+h3 {
+  font-family: 'Metal Mania', cursive;
+  font-size: 4rem;
+  text-shadow: 2px 2px lawngreen;
+}
+
 .grid {
   display: flex;
   justify-content: center;
@@ -70,9 +82,43 @@ button {
   min-height: 25px;
 }
 
+main {
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+}
+
+main section {
+  width: 25%;
+  height: 75vh;
+  display: flex;
+  flex-direction: column;
+  padding: 0 0.5%;
+}
+
+main section p {
+  font-size: 1.05rem;
+  text-shadow: 0.2px 0.2px lightgray;
+  font-weight: 800;
+  text-align: start;
+}
+
+.about-description {
+  font-size: 1.2rem;
+  line-height: 1.4;
+  text-align: center;
+}
+
+.grid-container {
+  display: flex;
+  flex-direction: column;
+}
+
 .gifs-container {
   margin-top: -20%;
-  padding-bottom: 5%;
+  display: flex;
+  justify-content: center;
+  align-items: center
 }
 
 /* .start-button {
@@ -82,7 +128,7 @@ button {
 } */
 
 .contra-guy {
-  width: 15%;
+  width: 50%;
 }
 
 section {
@@ -100,7 +146,7 @@ footer {
 }
 
 footer section {
-  width: 30%;
+  width: 25%;
   justify-content: center;
   align-items: center;
 }
@@ -118,24 +164,23 @@ footer section a{
 }
 
 .top-section img {
-  width:15%;
+  width:20%;
 }
 
 .middle-section {
-  width: 40%;
+  width: 50%;
   height: 15vh;
   align-items: flex-end;
   background-image: url(https://cdn.shopify.com/s/files/1/0822/1983/articles/lotr-boromir-pixel-art-pixel-art-lotr-boromir-lord-of-the-rings-fictional-character-pixel-8bit_1024x1024.png?v=1501223527);
   background-position: center;
   background-repeat: no-repeat;
-  background-size: 50%;
+  background-size: 35%;
 }
 
 .middle-section p {
-  margin-bottom: -2%;
   color: darkgreen;
-  font-size: 3.5rem;
-  font-family: 'Metal Mania', cursive;
+  font-size: 1.7rem;
+  font-family: 'Press Start 2P', cursive;
   text-shadow: 2px 2px lawngreen;
 }
 
@@ -144,8 +189,16 @@ footer section a{
   margin-right: 1%;
 }
 
+.bottom-section a:hover {
+  border-radius: 5px;
+  background-color: white;
+  color: black;
+  text-decoration: none;
+  transition: 1s;
+}
+
 .bottom-section img {
-  width: 75px;
+  width: 80px;
 }
 
 @keyframes App-logo-spin {
