--- a/game-of-life/src/App.css
+++ b/game-of-life/src/App.css
@@ -189,11 +189,17 @@ footer section a{
   margin-right: 1%;
 }
 
-.bottom-section a:hover {
+.bottom-section a {
+  background-color: black;
+  color: indigo;
   border-radius: 5px;
+  text-decoration: none;
+  transition: 0.3s;
+}
+
+.bottom-section a:hover {
   background-color: white;
   color: black;
-  text-decoration: none;
   transition: 1s;
 }
 
